--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,14 @@ abstract: 'Parse OpenGL Shader Language files into an abstract syntax tree'
 author:
   - 'Tom Molesworth <tom@entitymodel.com>'
 build_requires:
+  Module::Build: 0.3601
   Test::Deep: 0
+  Test::More: 0.88
 configure_requires:
   ExtUtils::MakeMaker: 6.30
+  Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300000, CPAN::Meta::Converter version 2.112150'
+generated_by: 'Dist::Zilla version 4.300009, CPAN::Meta::Converter version 2.120530'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,4 +19,5 @@ name: Parse-GLSL
 requires:
   Parser::MGC: 0.09
   parent: 0
-version: 0.001
+  perl: 5.008
+version: 0.002
